made some changes

--- a/membership.html
+++ b/membership.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nisela ng</title>
+    <title>IBEAYIFA</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@200;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
@@ -15,7 +15,7 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="images/Ibeayifa-04 1.png" alt="Logo">
+            <a href="index.html"><img src="images/Ibeayifa-04 1.png" alt="Logo"></a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
             <li><a href="step_1.html">Contact</a></li>
         </ul>
         <div class="donate-btn">
-            <a href="#" class="btn">Get Involved</a>
+            <a href="step_1.html" class="btn">Get Involved</a>
         </div>
 
         <!-- Hamburger menu for mobile -->
@@ -164,33 +164,33 @@
 
 
 
-    <!-- Banner Section -->
-    <section class="banner-section" style="background-color: white; margin-top: 60px;">
+  <div class="res">
 
         <!-- Banner Content (Centered) -->
-        <div class="banner-content  sec-2">
+        <div class="banner-content-2  sec-2">
             <h2>Join us in making a difference</h2>
-            <h6 style="font-size: 12px;">Become a memeber or make a donation to support our mission in OBA. Together, we can change lives and build a stronger community.
+            <h6 style="font-size: 12px; margin-top: 15px;">Become a memeber or make a donation to support our mission in OBA. Together, we can change lives and build a stronger community.
 
             </h6>
 
             <!-- Buttons -->
-            <div class="banner-buttons">
+            <div class="banner-buttons" style="margin-top: 20px;">
                 <button class="banner-btn banner-btn-orange">Make a Donation</button>
-                <button class="banner-btn banner-btn-transparent" style=" background-color: #f9fae9;
-    color: #555; border: #555;">Become a Member</button>
+                <button class="banner-btn banner-btn-transparent" style="   border: 2px solid transparent;
+    border-color: #e7e9e9; color: #555;">Become a Member</button>
             </div>
 
 
+            <section class="r-image"><img src="images/Frame 1.png" alt="Descriptive Alt Text" class="responsive-image-2"></section>
         </div>
-    </section>
 
-    <section style="margin-bottom: 170px;"><img src="images/Course Ima (6).png" alt="Descriptive Alt Text" class="responsive-image" width="1100px"></section>
+       
+</div>
    
 
 
     <!-- Contact Section -->
-    <section class="contact-section" style="margin-top: 60px;">
+    <section class="contact-section" style="margin-top: 560px;">
         <!-- Left Image Card -->
         <div class="image-card">
             <img src="images/contact.png" alt="Contact Us">
