--- a/campaign.html
+++ b/campaign.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nisela ng</title>
+    <title>IBEAYIFA</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@200;700&display=swap" rel="stylesheet">
+<link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 
 </head>
@@ -15,16 +17,16 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="images/Ibeayifa-04 1.png" alt="Logo">
+            <a href="index.html"><img src="images/Ibeayifa-04 1.png" alt="Logo"></a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="membership.html">About Us</a></li>
             <li><a href="campaign.html">Campaigns</a></li>
-            <li><a href="step_1.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="donate-btn">
-            <a href="#" class="btn">Get Involved</a>
+            <a href="step_1.html" class="btn">Get Involved</a>
         </div>
 
         <!-- Hamburger menu for mobile -->
