--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
             <a href="index.html"><img src="images/Ibeayifa-04 1.png" alt="Logo"></a>
         </div>
         <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="membership.html">About Us</a></li>
-        <li><a href="campaign.html">Campaigns</a></li>
-        <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="membership.html">About Us</a></li>
+            <li><a href="campaign.html">Campaigns</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="donate-btn">
             <a href="step_1.html" class="btn">Get Involved</a>
@@ -36,9 +36,6 @@
     </nav>
 
 
-
-
-
     <!-- Contact Section -->
     <section class="contact-section">
         <!-- Left Image Card -->
@@ -48,34 +45,20 @@
 
         <!-- Right Form Card -->
         <div class="form-card">
-            <h1>Become a Member</h1>
-            <h6>Step 1 of 3</h6>
-            <h6>Personal Information</h6>
-       <form method="post">
+            <h1>Contact Us</h1>
+            <h6>Get in Touch with Us</h6>
+
             <!-- Name Field -->
             <label class="label" for="name">Name</label>
-            <input type="text" id="name" placeholder="" style="margin-bottom: 12px;">
+            <input type="text" id="name" placeholder="">
 
             <!-- Email Field -->
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="" style="margin-bottom: 12px;">
+            <input type="email" id="email" placeholder="">
 
-            <!-- Email Field -->
-            <label for="email">Phone number</label>
-            <input type="email" id="email" placeholder="" style="margin-bottom: 12px;">
-
-            <!-- Email Field -->
-            <label for="email">Date of Birth</label>
-            <input type="email" id="email" placeholder=""  style="margin-bottom: 12px;">
-
-            <!-- Email Field -->
-            <label for="email">Gender</label>
-            <input type="email" id="email" placeholder=""  style="margin-bottom: 12px;">
-
-            <!-- Email Field -->
-            <label for="email">Home Address</label>
-            <input type="email" id="email" placeholder=""   style="margin-bottom: 12px;">
-        
+            <!-- Message Field -->
+            <label for="message">Message</label>
+            <textarea id="message" placeholder="Your Message"></textarea>
 
             <!-- Terms Checkbox -->
             <div class="terms">
@@ -84,10 +67,8 @@
             </div>
 
             <!-- Submit Button -->
-            <a href="step_2.html"><button class="btn-submit" style="width: 200px; background-color: #e45300;">Next</button></a>
+            <button class="btn-submit" style="width: 200px; background-color: #e45300;">Submit</button>
         </div>
-
-        </form>
     </section>
 
 
