--- a/step_2.html
+++ b/step_2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nisela ng</title>
+    <title>IBEAYIFA</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@200;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
@@ -15,16 +15,16 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="images/Ibeayifa-04 1.png" alt="Logo">
+            <a href="index.html"><img src="images/Ibeayifa-04 1.png" alt="Logo"></a>
         </div>
         <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="membership.html">About Us</a></li>
         <li><a href="campaign.html">Campaigns</a></li>
-        <li><a href="step_1.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="donate-btn">
-            <a href="#" class="btn">Get Involved</a>
+            <a href="step_1.html" class="btn">Get Involved</a>
         </div>
 
         <!-- Hamburger menu for mobile -->
